# adk-deepagents

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  REVIEW.md  devenv.nix  mise.toml  pitchfork.toml  prd.json  progress.txt  pyproject.toml
.drs/: context.md  drs.config.yaml
.github/workflows/: ci.yml  drs-pr-review.yml
.ralphi/: config.yaml
.vaibhav/: .last-branch  config.yaml
adk_deepagents/: __init__.py  a2a.py  dynamic_task_config.py  graph.py  memory.py  message_queue.py  model_info.py  prompts.py  summarization.py  types.py
adk_deepagents/backends/: __init__.py  composite.py  filesystem.py  memory_mapped_filesystem.py  protocol.py  runtime.py  state.py  store.py  utils.py
adk_deepagents/browser/: __init__.py  playwright_mcp.py  prompts.py
adk_deepagents/callbacks/: __init__.py  after_model.py  after_tool.py  before_agent.py  before_model.py  before_tool.py
adk_deepagents/cli/: __init__.py  __main__.py  config.py  delegation_config.py  interactive.py  main.py  models.py  non_interactive.py  paths.py  resources.py  session_store.py
adk_deepagents/execution/: __init__.py  bridge.py  heimdall.py  local.py
adk_deepagents/harbor/: __init__.py  adapter.py  backend.py  execution.py
adk_deepagents/optimization/: __init__.py  benchmark.py  contracts.py  evaluator.py  feedback.py  gate.py  history.py  learnings.py  loop.py  models.py  otel.py  replay.py  store.py  tools.py  trajectory.py
adk_deepagents/skills/: __init__.py  integration.py
adk_deepagents/telemetry/: __init__.py  otel.py  trace_reader.py
adk_deepagents/temporal/: __init__.py  activities.py  client.py  dev_worker.py  worker.py  workflows.py
adk_deepagents/tools/: __init__.py  compact.py  error_handler.py  filesystem.py  http.py  multimodal.py  ssrf.py  task.py  task_dynamic.py  (+5 more)
docs/: a2a.md  backends.md  browser.md  callbacks.md  cli.md  examples.md  execution.md  getting-started.md  human-in-the-loop.md  index.md  memory.md  meta-agent-plan.md  optimization.md  skills.md  structured-output.md  subagents.md  summarization.md  task-system.md  temporal.md  tools.md
tasks/: cli-implementation-plan.md  prd-adk-deepagents-cli-tui.md  prd-review.md
tests/: conftest.py
(+215 files in other folders)
