[project]
name = "adk-deepagents"
version = "0.1.0"
description = "Re-implementation of deepagents using Google ADK primitives"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "wcmatch>=8.5",
]

[project.optional-dependencies]
skills = [
    "adk-skills-agent>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adk_deepagents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
